--- a/Todo/src/index.css
+++ b/Todo/src/index.css
@@ -22,17 +22,21 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+@media screen and (max-width: 700px) {
+  h1{
+    font-size: 2em;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  h1{
+    font-size: 1em;
+  }
 }
 
 button {
