--- a/Todo/src/App.css
+++ b/Todo/src/App.css
@@ -146,6 +146,11 @@ header a {
   background-color: black;
   padding: 10px;
 }
+.item button{
+  float: right;
+  position: relative;
+  top: -50px;
+}
 
  
 /* Media Queries */
